tests/e2e/not_allowed/name4.error
Error: syntax error in story at line 1, column 15

1|    function foo a/: int
                    ^

E0041: `/` is not allowed here
