tests/e2e/not_allowed/name4.story
function foo a/: int
    foobar = 1
